kind/ingress_rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: elyra-ingress
spec:
  rules:
  - http:
      paths:
      - path: /elyra(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: elyra-ai
            port:
              number: 8888
